# linux-api-lab

./: CMakeLists.txt  CMakePresets.json  README.md  main.c
examples/: atomic_append.c  bad_exclusive_open.c  copy_file.c  copy_file_hole.c  custom_tee.c  dup_descriptor.c  file_offset.c  fork_example.c  get_file_descriptors.cpp  get_working_dir.cpp  input_with_descriptor.c  large_file_write.c  lseek_append.c  set_limit.cpp  t_readv.c
lib/: error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
